Fix the layout of the placeholder in player/alliance lists.

--- a/src/WebApp.Client/Components/Elements/StatsHub/ListItemPlaceholder.razor.css
+++ b/src/WebApp.Client/Components/Elements/StatsHub/ListItemPlaceholder.razor.css
@@ -6,15 +6,11 @@
     flex-shrink: 0;
 }
 
-.rank {
-    min-width: 32px;
-    flex-shrink: 0;
-}
-
 .avatar-container {
-    width: 36px;
-    aspect-ratio: 1/1;
+    width: 24px;
     flex-shrink: 0;
+    margin-left: 8px;
+    aspect-ratio: 1/1;
     display: flex;
     align-items: center;
     align-content: center;
@@ -34,12 +30,9 @@
         height: 56px;
     }
 
-    .rank {
-        min-width: 40px;
-    }
-
     .avatar-container {
-        width: 42px;
+        width: 32px;
+        margin-left: 12px;
     }
 
     .content {
