--- a/src/WebApp.Client/Components/Elements/StatsHub/PlayerListItemComponent.razor.css
+++ b/src/WebApp.Client/Components/Elements/StatsHub/PlayerListItemComponent.razor.css
@@ -9,15 +9,6 @@
     flex-shrink: 0;
 }
 
-.rank {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 32px;
-    padding: 0 8px;
-    flex-shrink: 0;
-}
-
 .avatar-container {
     width: 24px;
     flex-shrink: 0;
@@ -92,11 +83,6 @@
 @container (min-width: 470px) {
     .component-root {
         height: 56px;
-    }
-
-    .rank {
-        min-width: 40px;
-        padding: 0 12px;
     }
 
     .avatar-container {
